dataset1235/2025-2/1955397009/users/4276496853/executions/903431226_1630070338.log
== SUBMISSION (2025-08-26 12:54:09)
-- CODE: 
numero = float(input())
resultado = n * n 
print(resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:54:07)
-- CODE: 
numero = float(input())
resultado = n * n 
print(resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    resultado = n * n 
                ^
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:50:00)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:55:36)
-- CODE: 
numero = float(input())
quadrado = numero ** 2 
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:55:35)
-- CODE: 
numero = float(input())
quadrado = numero ** 2 
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
